I'm working on the design

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,12 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <!-- font awesome  -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300;1,700&family=Lora:ital,wght@0,400;1,400;1,700&family=Montserrat:ital,wght@1,900&family=Nunito:wght@300;400&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300;1,700;1,900&family=Lora:ital,wght@0,400;1,400;1,700&family=Montserrat:ital,wght@1,900&family=Mukta:wght@300;700;800&family=Nunito:wght@300;400&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
